@@ -12,6 +12,7 @@ importFrom(dplyr,left_join)
 importFrom(dplyr,mutate)
 importFrom(dplyr,rename)
 importFrom(dplyr,right_join)
+importFrom(dplyr,sample_n)
 importFrom(dplyr,select)
 importFrom(dplyr,summarize)
 importFrom(dplyr,ungroup)
