@@ -33,7 +33,7 @@
 #' @template etc
 #'
 #' @import shiny
-#' @importFrom dplyr mutate arrange select filter rename left_join right_join coalesce distinct summarize everything ungroup first
+#' @importFrom dplyr mutate arrange select filter rename left_join right_join coalesce distinct summarize everything ungroup first sample_n
 #' @importFrom utils data
 #' @importFrom ggplot2 ggplot labs coord_flip aes geom_col geom_point geom_text guide_legend
 #' @importFrom shinythemes shinytheme
@@ -202,6 +202,8 @@ my_ui <- function(page_title='Drink Schnauzer') {
 				selectInput("must_not_have_ing","Must Not Have:",choices=ingr,selected=c(),multiple=TRUE),
 				selectInput("from_sources","Sources:",choices=all_source,selected=all_source[grepl('diffords|kindred',all_source)],multiple=TRUE),
 				textInput("name_regex","Name Regex:",value='',placeholder='^sazerac'),
+				helpText('Press for random cocktails:'),
+				actionButton("hobsons","Hobson's Choice!"),
 				hr(),
 				sliderInput("max_ingr","Maximum Ingredients:",sep='',min=1,max=20,value=6),
 				sliderInput("max_other_ingr","Maximum Unlisted Ingredients:",sep='',min=1,max=20,value=6),
@@ -293,7 +295,7 @@ applylink <- function(title,url) {
 	list(recipe=recipe_df %>% dplyr::select(-cocktail,-rating,-votes,-url),cocktail=cocktail_df)
 }
 
-.filter_ingredients <- function(both,name_regex,must_have_ing,must_not_have_ing,logical_sense=c('AND','OR')) {
+.filter_ingredients <- function(both,name_regex,must_have_ing,must_not_have_ing,logical_sense=c('AND','OR'),extra_ids=NULL) {
 	logical_sense <- match.arg(logical_sense)
 
 	if (nzchar(name_regex)) {
@@ -305,6 +307,13 @@ applylink <- function(title,url) {
 	} else {
 		# empty
 		match_name <- tibble::tribble(~cocktail_id,~matches_name)
+	}
+	if (!is.null(extra_ids)) {
+		more_match <- both$cocktail %>%
+			dplyr::filter(cocktail_id %in% extra_ids) %>%
+			dplyr::select(cocktail_id) %>%
+			dplyr::mutate(matches_name=TRUE) 
+		match_name <- match_name %>% rbind(more_match)
 	}
 
 	new_recipe <- both$recipe %>%
@@ -496,7 +505,7 @@ my_server <- function(input, output, session) {
 	})
 
 	filter_ingr <- reactive({
-		.filter_ingredients(both=get_both(),name_regex=input$name_regex,
+		.filter_ingredients(both=get_both(),name_regex=input$name_regex,extra_ids=hobsons_choice$ids,
 												must_have_ing=input$must_have_ing,
 												must_not_have_ing=input$must_not_have_ing,
 												logical_sense=input$logical_sense)
@@ -519,6 +528,8 @@ my_server <- function(input, output, session) {
 	final_merged <- reactive({
 		.merge_both(both=final_both())
 	})
+	selectable <- reactive({
+	})
 
 	# if the user selects any drinks from the table, 
 	# take their ingredients
@@ -531,6 +542,27 @@ my_server <- function(input, output, session) {
 			dplyr::inner_join(drinks[selrows,] %>% 
 												dplyr::select(cocktail_id,cocktail,rating),by='cocktail_id')
 		otdat
+	})
+
+	hobsons_choice <- reactiveValues(ids=NULL)
+	
+	observeEvent(input$hobsons,{
+		both <- .filter_num_ingredients(both=get_both(),must_have_ing=c(),
+														min_rating=input$min_rating,max_ingr=input$max_ingr,
+														max_other_ingr=input$max_other_ingr) 
+		both <- .filter_tstat(both=both,min_t=input$min_tstat,t_zero=input$t_zero)
+		both <- .filter_src(both=both,from_sources=input$from_sources)
+		eligible <- both$cocktail %>%
+			distinct(cocktail_id) %>%
+			sample_n(size=5,replace=FALSE)
+		hobsons_choice$ids <- eligible$cocktail_id
+	})
+	# clear the choices when you select ingredients? others?
+	observeEvent({
+		input$must_have_ing
+		input$must_not_have_ing
+	},{
+		hobsons_choice$ids <- NULL
 	})
 
 	# table of comparables #FOLDUP
@@ -621,6 +653,12 @@ my_server <- function(input, output, session) {
 #' occurs with the selected ingredient, as measured by the number of
 #' cocktails, and by \sQuote{rho}, which is like a correlation based
 #' on the proportion.
+#' 
+#' A button labelled, \dQuote{Hobson's Choice} allows you to populate
+#' the cocktail table with five random cocktails that meet the numerical
+#' filters on number of ingredients, rating, and so on, but which do not
+#' meet the ingredient selections. Changing the ingredients selections
+#' will unselect the random selections.
 #'
 #' @section Screenshots:
 #'
