@@ -1,4 +1,7 @@
 
+2018-07-15 Steven E. Pav <shabbychef@gmail.com>
+* adding Hobson's Choice button.
+
 2018-07-07 Steven E. Pav <shabbychef@gmail.com>
 * adding 10K cocktails from drinksmixer.
 
